correct header styles

--- a/dest/main.css
+++ b/dest/main.css
@@ -143,21 +143,21 @@ header:after {
 header:after {
   clear: both;
 }
-.header-wraper {
+header .header-wraper {
   width: 100%;
   margin: 0 auto;
   overflow: hidden;
   max-width: 1250px;
 }
-.header-wraper:before,
-.header-wraper:after {
+header .header-wraper:before,
+header .header-wraper:after {
   content: " ";
   display: table;
 }
-.header-wraper:after {
+header .header-wraper:after {
   clear: both;
 }
-.logo {
+header .logo {
   display: inline-block;
   float: left;
   overflow: hidden;
@@ -171,14 +171,14 @@ header:after {
   text-align: center;
 }
 @media only screen and (min-device-width: 980px) and (min-width: 980px) {
-  .logo {
+  header .logo {
     text-align: left;
   }
-  .logo span {
+  header .logo span {
     padding-left: 165px;
   }
 }
-nav {
+header nav {
   display: inline-block;
   text-align: right;
   line-height: 80px;
@@ -188,17 +188,17 @@ nav {
   width: 65.83333333333333%;
   margin: 0 0.416666666666666%;
 }
-.nav-wraper {
+header .nav-wraper {
   padding-right: 20px;
   text-align: right;
 }
-.nav-item {
+header .nav-item {
   display: inline-block;
   font-size: 1em;
   margin: 0 10px;
   font-weight: 100;
 }
-.nav-item a {
+header .nav-item a {
   text-transform: uppercase;
   border-bottom: 3px solid #fdd835;
   text-decoration: none;
