add promo box and form skeleton

--- a/src/index.jade
+++ b/src/index.jade
@@ -14,3 +14,31 @@ html
 					ul.nav-wraper
 						li.nav-item
 							a(href="#") Contact Us
+
+		.promo
+			.promo-wraper
+				.green-elements
+					img.green-element(src="./img/green-element.png", alt="")
+				.phone
+					.phone_body
+						img(src="./img/phone_body.png", alt="")
+						.phone_screen
+							img(src="./img/dyadya.png", alt="")
+				.promo_left-side
+					.content
+						h1 We design and build <br/> beatiful web and mobile apps
+						p You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. -Walt Disney
+						.button-container
+							button.green-button Know more
+
+		section.form
+			.container
+				form
+					h3 Lets talk
+					input(type="text" placeholder='First Name')
+					input(type="text" placeholder='Last Name')
+					input(type="email" placeholder='Email Address')
+					input(type="text" placeholder='App Design')
+					textarea(placeholder='Type your query here')
+					input(type="submit", value="send")
+
