--- a/dest/main.css
+++ b/dest/main.css
@@ -204,3 +204,73 @@ header .nav-item a {
   text-decoration: none;
   color: #fff;
 }
+button {
+  text-transform: uppercase;
+  line-height: 50px;
+  border: none;
+  border-radius: 5px;
+  color: #fff;
+  font-size: 1.125em;
+  font-weight: bold;
+  padding: 0 24px;
+  outline: none;
+  cursor: pointer;
+}
+.green-button {
+  background-color: #04e4a2;
+}
+.promo {
+  background-color: #ef5350;
+  height: 580px;
+}
+.promo-wraper {
+  width: 100%;
+  margin: 0 auto;
+  overflow: hidden;
+  max-width: 1250px;
+}
+.green-elements {
+  position: absolute;
+  padding-top: 75px;
+  left: 0;
+}
+.phone {
+  position: absolute;
+  display: inline-block;
+  left: 14%;
+  margin-top: 65px;
+}
+.phone_screen {
+  position: absolute;
+  margin-top: -700px;
+  margin-left: 30px;
+}
+.promo_left-side {
+  display: inline-block;
+  float: left;
+  overflow: hidden;
+  width: 44.16666666666667%;
+  margin: 0 0.416666666666666%;
+  margin-left: 50.41666666666666%;
+  color: #fff;
+}
+.promo_left-side .content {
+  display: inline-block;
+  padding-left: 20px;
+  margin-top: 180px;
+}
+.promo_left-side h1 {
+  text-transform: uppercase;
+  font-size: 1.875em;
+  line-height: 38px;
+  margin-bottom: 25px;
+}
+.promo_left-side p {
+  font-size: 1.0625em;
+  line-height: 20px;
+}
+.button-container {
+  margin-top: 60px;
+  text-align: right;
+  padding-right: 30px;
+}
