--- a/src/main.styl
+++ b/src/main.styl
@@ -4,6 +4,8 @@ meyer-reset()
 
 DESCTOP_SCREEN = only screen, min-device-width 980px, min-width 980px
 
+LIGHT-GREEN = #04e4a2
+
 .head-line
 	position relative
 	width 100%
@@ -60,6 +62,67 @@ header
 			color #FFFFFF
 		
 	
-	
-	
+// Button style
+button
+	text-transform uppercase
+	line-height 50px
+	border none
+	border-radius 5px
+	color #FFFFFF
+	font-size em(18)
+	font-weight bold
+	padding 0 24px
+	outline none
+	cursor pointer
+.green-button
+	background-color LIGHT-GREEN
 
+
+// Promo style
+.promo
+	background-color #ef5350
+	height 580px
+
+.promo-wraper
+	gs('fluid')
+	max-width 1250px
+
+.green-elements
+	position absolute
+	padding-top 75px
+	left 0
+
+.phone
+	position absolute
+	display inline-block
+	left 14%
+	margin-top 65px
+
+.phone_screen
+	position absolute
+	margin-top -700px
+	margin-left 30px
+	
+.promo_left-side
+	col(5.4)
+	offset(6)
+	color #FFFFFF
+	.content
+		display inline-block
+		padding-left 20px
+		margin-top 180px
+	h1
+		text-transform: uppercase
+		font-size em(30)
+		line-height 38px
+		margin-bottom 25px
+	p
+		font-size em(17)
+		line-height 20px
+	
+.button-container
+	margin-top 60px
+	text-align right
+	padding-right 30px
+
+	
