--- a/src/index.jade
+++ b/src/index.jade
@@ -24,7 +24,7 @@ html
 						img(src="./img/phone_body.png", alt="")
 						.phone_screen
 							img(src="./img/dyadya.png", alt="")
-				.promo_left-side
+				.promo_right-side
 					.content
 						h1 We design and build <br/> beatiful web and mobile apps
 						p You can design and create, and build the most wonderful place in the world. But it takes people to make the dream a reality. -Walt Disney
