--- a/dest/main.css
+++ b/dest/main.css
@@ -133,6 +133,9 @@ body {
 header {
   background-color: #e94643;
   width: 100%;
+  z-index: 100;
+  position: relative;
+  display: block;
 }
 header:before,
 header:after {
@@ -235,24 +238,27 @@ button,
 .green-elements {
   position: absolute;
   visibility: hidden;
-  left: 0;
+  margin-top: -75px;
+  margin-left: -350px;
+  z-index: 1;
 }
 @media only screen and (min-device-width: 1280px) and (min-width: 1280px) {
   .green-elements {
     visibility: visible;
-    padding-top: 75px;
   }
 }
 .phone {
   visibility: hidden;
   position: absolute;
+  display: block;
+  z-index: 2;
 }
 @media only screen and (min-device-width: 1280px) and (min-width: 1280px) {
   .phone {
     visibility: visible;
     display: inline-block;
-    left: 190px;
     margin-top: 65px;
+    margin-left: 135px;
   }
 }
 .phone_screen {
@@ -359,10 +365,17 @@ button,
     margin-left: 20px;
   }
 }
-.form .inputList:before {
+.form .inputList {
+  display: inline-block;
+  position: relative;
+}
+.form .inputList::after {
+  display: inline-block;
   position: absolute;
-  content: '>';
-  font-size: 30px;
+  content: '';
+  background-color: #808080;
+  height: 400px;
+  width: 400px;
 }
 .form textarea {
   width: 100%;
