--- a/src/index.jade
+++ b/src/index.jade
@@ -3,6 +3,7 @@ html
 		title Indipixel
 		link(rel="stylesheet", href="./main.css")
 		link(href="https://fonts.googleapis.com/css?family=Montserrat", rel="stylesheet")
+		link(rel="stylesheet", href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css")
 	body
 		.head-line
 		header
@@ -42,4 +43,15 @@ html
 						input.inputList(type="text" placeholder='App Design')
 					textarea(placeholder='Type your query here' rows=4)
 					input.buttonInput.red-button(type="submit", value="send")
+
+		footer
+			.container
+				.copyrighte 
+					span © 2015 indipixel design
+				.contact-mail-box
+					.icon
+						i.fa.fa-envelope-o
+					.email
+						span contact@yourmail.com
+
 
